# rsomics-adf-test

./: Cargo.toml  README.md
benches/: adf.rs
src/: cli.rs  lib.rs  mackinnoncrit.rs  mackinnonp.rs  ols.rs
tests/: compat.rs  edge_cases.rs
