[package]
name = "rsomics-adf-test"
version = "0.1.1"
description = "Augmented Dickey-Fuller unit-root test — value-exact reimplementation of statsmodels.tsa.stattools.adfuller"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
repository = "https://github.com/omics-rust/rsomics-adf-test"
authors = ["Zane Leong <efd@live.com>"]
categories = ["science", "command-line-utilities"]
keywords = ["statistics", "adf", "unit-root", "time-series", "statsmodels"]
readme = "README.md"

[[bin]]
name = "rsomics-adf-test"
path = "src/main.rs"

[lib]
name = "rsomics_adf_test"
path = "src/lib.rs"
doctest = false

[dependencies]
rsomics-common = { version = "0.6", features = [] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
fast-float2 = "0.2"
nalgebra = "0.33"
ryu = "1"

[dev-dependencies]
criterion = { version = "0.7", default-features = false, features = ["cargo_bench_support"] }
serde_json = "1"

[[bench]]
name = "adf"
harness = false
